[project]
name = "prompt-generator-comfyui"
description = "Custom AI prompt generator node for ComfyUI."
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/alpertunga-bile/prompt-generator-comfyui"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "prompt-generator-comfyui"
Icon = ""
